code quality changes, fix nav focus, fix bug where menus could go offscreen

--- a/resources/scss/layout/_header.scss
+++ b/resources/scss/layout/_header.scss
@@ -1,5 +1,4 @@
 .site-header {
-
 	background-color: $ui-grey-3;
 	color: $ui-white;
 	@extend %screen-shell-grid;
@@ -14,7 +13,6 @@
 }
 
 	.site-header__container {
-
 		position: relative;
 		grid-column: wide;
 		display: grid;
@@ -38,7 +36,6 @@
 		}
 
 		&::before {
-
 			content: '';
 			display: block;
 			border: spacing(3) solid $ui-grey-2;
@@ -63,20 +60,15 @@
 				left: 50%;
 				transform: translateX(-50%);
 			}
-
 		}
-
 	}
 
 		.site-header__logo {
-
 			grid-column: 1;
 			grid-row: 1;
-
 		}
 
 			.site-header__logo-link {
-
 				display: block;
 
 				> svg {
@@ -95,17 +87,13 @@
 
 
 		.site-header__navigation {
-
 			// mobile
 			@include upto($header-break-2) {
 				display: none;
 			}
-
 			// desktop
 			@include from($header-break-2) {
-
 				// generic
-
 				font-size: 16px;
 				@include font('secondary', 'bold');
 				grid-column: all;
@@ -124,7 +112,6 @@
 
 				// top-level
 				> ul {
-
 					display: flex;
 					flex-wrap: wrap;
 					gap: spacing(6);
@@ -137,24 +124,24 @@
 							display: block;
 							color: $ui-white;
 							padding: spacing(2) 0;
-							//margin-right: spacing(6);
 							text-decoration: none;
 						}
 
-						&:hover {
-
-							.site-header__mega-nav {
-								display: block;
-							}
+						&:hover, &:focus-within {
 
 							> a {
-
 								text-decoration: none;
 
 								&::before {
 									height: 3px;
 								}
 
+							}
+							.nav-drop {
+								display:flex;
+							}
+							.nav-drop-simple {
+								display: block;
 							}
 
 						}
@@ -170,7 +157,6 @@
 				}
 
 				> ul > li > ul {
-					//display: none;
 					position: absolute;
 					background: $ui-grey-8;
 					color: black;
@@ -180,8 +166,8 @@
 					width: max-content;
 					gap: 56px;
 
-					&.nav-drop {
-						display: flex;
+					&.nav-drop, &.nav-drop-simple {
+						display: none;
 					}
 					&.nav-drop-simple, .nav-subdrop-single-list {
 						columns: 2;
@@ -201,7 +187,7 @@
 						font-size: 15px;
 					}
 					.boxed-link {
-						margin-top:40px;
+						margin-top: 40px;
 					}
 				}
 
@@ -210,7 +196,6 @@
 				}
 
 				.site-header__mega-nav {
-
 					display: none;
 					position: absolute;
 					top: 100%;
@@ -263,7 +248,6 @@
 		}
 
 			.site-header__search {
-
 				height: 20px;
 				border: 1px solid $ui-grey-5;
 				border-radius: 2px 10px 10px 2px;
@@ -272,7 +256,6 @@
 				width: 100px;
 
 				input {
-
 					font-size: 11px;
 					flex: 1 1 100%;
 					@include font('secondary', 'bold');
@@ -311,7 +294,6 @@
 				}
 
 				button {
-
 					flex: 0 0 auto;
 
 					> svg {
@@ -327,7 +309,6 @@
 			}
 
 		.site-header__hamburger {
-
 			font-size: 33px;
 			height: 1em;
 			width: 1em;
@@ -366,7 +347,6 @@
 		}
 
 .site-header__print-logo {
-
 	border-bottom: 1px dashed grey;
 	padding-bottom: spacing(3);
 	margin-bottom: spacing(4);
@@ -387,15 +367,25 @@
 	max-width:194px;
 	display: flex;
 
-	&.box-green {border-color: $ui-brand;}
-	&.box-teal {border-color: $ui-teal;}
-	&.box-blue {border-color: $ui-blue;}
-	&__image {
-		height: 45px;
-		width: auto;
-		margin-right:6px;
+	&[data-highlight="blue"] {
+		border-color: $ui-blue;
+	}
+
+	&[data-highlight="green"] {
+		border-color: $ui-brand;
+	}
+
+	&[data-highlight="teal"] {
+		border-color: $ui-teal;
 	}
 }
+
+.boxed-link__image {
+	height: 45px;
+	width: auto;
+	margin-right:6px;
+}
+
 span.link-highlight {
 	border-bottom: 3px solid transparent;
 	display: inline-block;
@@ -406,9 +396,17 @@ a.link-highlight {
 	display: inline-block;
 	position: relative;
 
-	&.link-highlight-green::before{background-color: $ui-brand;}
-	&.link-highlight-teal::before{background-color: $ui-teal;}
-	&.link-highlight-blue::before{background-color: $ui-blue;}
+	&[data-highlight="blue"]::before {
+		background-color: $ui-blue;
+	}
+
+	&[data-highlight="green"]::before {
+		background-color: $ui-brand;
+	}
+
+	&[data-highlight="teal"]::before {
+		background-color: $ui-teal;
+	}
 
 	&::before {
 		content: '';
@@ -418,7 +416,6 @@ a.link-highlight {
 		right: 0;
 		bottom: -3px;
 		height: 0;
-		//background-color: $ui-brand;
 		transition: height .2s ease;
 	}
 
